# Fly-lang

./: .gitignore  LICENSE  README.md  publish.yml  pyproject.toml  setup.py
.github/workflows/: python-publish.yaml  python-publishh.yml
examples/: hello.fy  osint.fy  scanner.fy  web_check.fy
fly/: __init__.py  __main__.py  cli.py  interpreter.py  keywords.py  lexer.py
fly/tools/: __init__.py  manager.py
tests/: test_lexer.py
